--- a/case5.html
+++ b/case5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assests/normalize.css">
     <style>
         main{
             width: 1000px;
