--- a/case2.html
+++ b/case2.html
@@ -2,7 +2,7 @@
 <html lang="en" style="font-size: 20px;">
 <head>
     <meta charset="UTF-8">
-    <title>CSS Transition Ex 02</title>
+    <title></title>
 
     <link rel="stylesheet" href="assests/normalize.css">
 
